v2.10.0/_sources/plugins/network_profile_switching_workflow_manager_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.network_profile_switching_workflow_manager module -- Resource module for managing network switch profiles with template and site assignments in Cisco Catalyst Center
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.10.0).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.network_profile_switching_workflow_manager`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 6.31.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- This module facilitates comprehensive network switch profile management in Cisco Catalyst Center. - Supports creating, updating, and deleting switch profiles with Day-N template assignments. - Enables profile assignment to sites within the site hierarchy for network standardization. - Provides selective site and template unassignment capabilities for profile lifecycle management. - Supports bulk profile operations for enterprise-scale network infrastructure deployment. - Integrates with Cisco Catalyst Center's network profile framework for consistent switching configuration.



.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 3.1.6.0.2
- python \>= 3.12






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_api_task_timeout"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_api_task_timeout"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-catalystcenter_api_task_timeout:
      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-dnac_api_task_timeout:

      .. rst-class:: ansible-option-title

      **catalystcenter_api_task_timeout**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_api_task_timeout" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_api_task_timeout`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Defines the timeout in seconds for API calls to retrieve task details. If the task details are not received within this period, the process will end, and a timeout notification will be logged.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`1200`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_debug"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-catalystcenter_debug:
      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-dnac_debug:

      .. rst-class:: ansible-option-title

      **catalystcenter_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_debug`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Indicates whether debugging is enabled in the Cisco Catalyst Center SDK.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_host"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_host"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-catalystcenter_host:
      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-dnac_host:

      .. rst-class:: ansible-option-title

      **catalystcenter_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_host`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The hostname of the Cisco Catalyst Center.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_log"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_log"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-catalystcenter_log:
      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-dnac_log:

      .. rst-class:: ansible-option-title

      **catalystcenter_log**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_log" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_log`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable/disable playbook execution logging.

      When true and catalystcenter\_log\_file\_path is provided, - Create the log file at the execution location with the specified name.

      When true and catalystcenter\_log\_file\_path is not provided, - Create the log file at the execution location with the name 'catalystcenter.log'.

      When false, - Logging is disabled.

      If the log file doesn't exist, - It is created in append or write mode based on the "catalystcenter\_log\_append" flag.

      If the log file exists, - It is overwritten or appended based on the "catalystcenter\_log\_append" flag.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_log_append"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_log_append"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-catalystcenter_log_append:
      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-dnac_log_append:

      .. rst-class:: ansible-option-title

      **catalystcenter_log_append**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_log_append" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_log_append`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Determines the mode of the file. Set to True for 'append' mode. Set to False for 'write' mode.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_log_file_path"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_log_file_path"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-catalystcenter_log_file_path:
      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-dnac_log_file_path:

      .. rst-class:: ansible-option-title

      **catalystcenter_log_file_path**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_log_file_path" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_log_file_path`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Governs logging. Logs are recorded if catalystcenter\_log is True.

      If path is not specified, - When 'catalystcenter\_log\_append' is True, 'catalystcenter.log' is generated in the current Ansible directory; logs are appended. - When 'catalystcenter\_log\_append' is False, 'catalystcenter.log' is generated; logs are overwritten.

      If path is specified, - When 'catalystcenter\_log\_append' is True, the file opens in append mode. - When 'catalystcenter\_log\_append' is False, the file opens in write (w) mode. - In shared file scenarios, without append mode, content is overwritten after each module execution. - For a shared log file, set append to False for the 1st module (to overwrite); for subsequent modules, set append to True.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"catalystcenter.log"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_log_level"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_log_level"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-catalystcenter_log_level:
      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-dnac_log_level:

      .. rst-class:: ansible-option-title

      **catalystcenter_log_level**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_log_level" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_log_level`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Sets the threshold for log level. Messages with a level equal to or higher than this will be logged. Levels are listed in order of severity [CRITICAL, ERROR, WARNING, INFO, DEBUG].

      CRITICAL indicates serious errors halting the program. Displays only CRITICAL messages.

      ERROR indicates problems preventing a function. Displays ERROR and CRITICAL messages.

      WARNING indicates potential future issues. Displays WARNING, ERROR, CRITICAL messages.

      INFO tracks normal operation. Displays INFO, WARNING, ERROR, CRITICAL messages.

      DEBUG provides detailed diagnostic info. Displays all log messages.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"WARNING"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_password"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_password"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-catalystcenter_password:
      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-dnac_password:

      .. rst-class:: ansible-option-title

      **catalystcenter_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_password`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The password for authentication at the Cisco Catalyst Center.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_port"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_port"></div>
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-catalystcenter_api_port:
      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-catalystcenter_port:
      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-dnac_port:

      .. rst-class:: ansible-option-title

      **catalystcenter_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_port, catalystcenter_api_port`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Specifies the port number associated with the Cisco Catalyst Center.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"443"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_task_poll_interval"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_task_poll_interval"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-catalystcenter_task_poll_interval:
      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-dnac_task_poll_interval:

      .. rst-class:: ansible-option-title

      **catalystcenter_task_poll_interval**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_task_poll_interval" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_task_poll_interval`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Specifies the interval in seconds between successive calls to the API to retrieve task details.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`2`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-catalystcenter_username:
      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-dnac_username:
      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-user:

      .. rst-class:: ansible-option-title

      **catalystcenter_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_username, user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The username for authentication at the Cisco Catalyst Center.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_verify"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-catalystcenter_verify:
      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-dnac_verify:

      .. rst-class:: ansible-option-title

      **catalystcenter_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_verify`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_version"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_version"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-catalystcenter_version:
      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-dnac_version:

      .. rst-class:: ansible-option-title

      **catalystcenter_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_version`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Specifies the version of the Cisco Catalyst Center that the SDK should use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"2.3.7.6"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-config:

      .. rst-class:: ansible-option-title

      **config**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A list containing the comprehensive details required for network switch profile creation, assignment, and lifecycle management. Each profile configuration supports template assignments, site associations, and operational state management for enterprise network infrastructure standardization and automation.
          


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/day_n_templates"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-config/day_n_templates:

      .. rst-class:: ansible-option-title

      **day_n_templates**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/day_n_templates" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      A list of Day-N template names assigned to the profile for ongoing device configuration. Day-N templates provide post-deployment configuration management including compliance, monitoring, and operational configuration updates for network devices. Templates must exist in Catalyst Center before assignment to profiles. Maximum length per template: 200 characters. Supports multiple template assignment for comprehensive device lifecycle management.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/onboarding_templates"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-config/onboarding_templates:

      .. rst-class:: ansible-option-title

      **onboarding_templates**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/onboarding_templates" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      A list of onboarding template names to be assigned to the profile for device provisioning. Note: Onboarding templates are currently unavailable due to SDK/API upgrade constraints. This feature will be available in an upcoming release with enhanced template support. Reserved for future functionality - do not use in current implementations.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/profile_name"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-config/profile_name:

      .. rst-class:: ansible-option-title

      **profile_name**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/profile_name" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      The unique name of the switch profile to be created or managed. Profile names must be unique within the Cisco Catalyst Center instance and should follow organizational naming conventions for network infrastructure. Maximum length: 255 characters.
          


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config/site_names"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-config/site_names:

      .. rst-class:: ansible-option-title

      **site_names**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config/site_names" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      A list of site names specified in the full site hierarchy format for profile assignment. Sites must exist in the Catalyst Center site hierarchy before profile assignment. Format examples: 'Global/Country/City/Building' or 'Global/Region/Campus/Floor'. Maximum length per site: 200 characters. Supports bulk site assignment for scalable network profile deployment.
          


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-config_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-config_verify:

      .. rst-class:: ansible-option-title

      **config_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-config_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Set to \`True\` to enable configuration verification on Cisco Catalyst Center after applying the playbook configuration. This ensures that the system validates the configuration state after the changes are applied.
          


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-state"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-state:

      .. rst-class:: ansible-option-title

      **state**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-state" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Specifies the desired operational state for switch profile configuration management. - merged: Creates new switch profiles or updates existing profiles by adding/modifying
            template assignments and site associations. Supports incremental profile enhancement.
          - deleted: Removes switch profiles, unassigns sites, or detaches templates based on
            the configuration provided. Supports selective deletion for profile lifecycle management.
          


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`"merged"` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`"deleted"`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - This module utilizes the following SDK methods site\_design.retrieves\_the\_list\_of\_sites\_that\_the\_given\_network\_profile\_for\_sites\_is\_assigned\_to\_v1 site\_design.assign\_sites site\_design.retrieves\_the\_list\_of\_network\_profiles\_for\_sites\_v1 site\_design.assign\_a\_network\_profile\_for\_sites\_to\_the\_given\_site\_v1 site\_design.unassigns\_a\_network\_profile\_for\_sites\_from\_multiple\_sites\_v1 site\_design.deletes\_a\_network\_profile\_for\_sites\_v1 configuration\_templates.gets\_the\_templates\_available\_v1 network\_settings.retrieve\_cli\_templates\_attached\_to\_a\_network\_profile\_v1
   - The following API paths are used GET /dna/intent/api/v1/networkProfilesForSites GET /dna/intent/api/v1/template-programmer/template GET /dna/intent/api/v1/networkProfilesForSites/{profileId}/templates POST /dna/intent/api/v1/networkProfilesForSites/{profileId}/siteAssignments POST /dna/intent/api/v1/networkProfilesForSites/{profileId}/siteAssignments/bulk POST /api/v1/siteprofile
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins instead embedded connection manager from Cisco Catalyst Center SDK

.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    ---
    - hosts: catalystcenter_servers
      vars_files:
        - credentials.yml
      gather_facts: false
      connection: local
      tasks:
        # Create a comprehensive switching profile with Day-N templates and site assignments
        - name: Create enterprise switching profile for campus network infrastructure
          cisco.catalystcenter.network_profile_switching_workflow_manager:
            catalystcenter_host: "{{ catalystcenter_host }}"
            catalystcenter_username: "{{ catalystcenter_username }}"
            catalystcenter_password: "{{ catalystcenter_password }}"
            catalystcenter_verify: "{{ catalystcenter_verify }}"
            catalystcenter_port: "{{ catalystcenter_port }}"
            catalystcenter_version: "{{ catalystcenter_version }}"
            catalystcenter_debug: "{{ catalystcenter_debug }}"
            catalystcenter_log: true
            catalystcenter_log_level: DEBUG
            config_verify: true
            catalystcenter_api_task_timeout: 1000
            catalystcenter_task_poll_interval: 1
            state: merged
            config:
              - profile_name: "Campus_Switching_Profile"
                day_n_templates:
                  - "Campus_Switch_Config_Update"
                site_names:
                  - "Global/India/Chennai"
                  - "Global/India/Mumbai"

        # Update existing switching profile with additional templates and sites
        - name: Update enterprise switching profile for multi-region deployment
          cisco.catalystcenter.network_profile_switching_workflow_manager:
            catalystcenter_host: "{{ catalystcenter_host }}"
            catalystcenter_username: "{{ catalystcenter_username }}"
            catalystcenter_password: "{{ catalystcenter_password }}"
            catalystcenter_verify: "{{ catalystcenter_verify }}"
            catalystcenter_port: "{{ catalystcenter_port }}"
            catalystcenter_version: "{{ catalystcenter_version }}"
            catalystcenter_debug: "{{ catalystcenter_debug }}"
            catalystcenter_log: true
            catalystcenter_log_level: DEBUG
            config_verify: true
            catalystcenter_api_task_timeout: 1000
            catalystcenter_task_poll_interval: 1
            state: merged
            config:
              - profile_name: "Enterprise_Switching_Profile"
                day_n_templates:
                  - "Periodic_Config_Audit"
                  - "Security_Compliance_Check"
                site_names:
                  - "Global/India/Chennai/Main_Office"
                  - "Global/India/Madurai/Branch_Office"
                  - "Global/USA/San_Francisco/Regional_HQ"

        # Demonstrate idempotent deletion of multiple switching profiles
        - name: Remove obsolete switching profiles from network infrastructure
          cisco.catalystcenter.network_profile_switching_workflow_manager:
            catalystcenter_host: "{{ catalystcenter_host }}"
            catalystcenter_username: "{{ catalystcenter_username }}"
            catalystcenter_password: "{{ catalystcenter_password }}"
            catalystcenter_verify: "{{ catalystcenter_verify }}"
            catalystcenter_port: "{{ catalystcenter_port }}"
            catalystcenter_version: "{{ catalystcenter_version }}"
            catalystcenter_debug: "{{ catalystcenter_debug }}"
            catalystcenter_log: true
            catalystcenter_log_level: DEBUG
            config_verify: true
            catalystcenter_api_task_timeout: 1000
            catalystcenter_task_poll_interval: 1
            state: deleted
            config:
              - profile_name: "Legacy_Switching_Profile"
              - profile_name: "Deprecated_Local_Profile"

        # Complete profile removal including all associated configurations
        - name: Delete switching profile and verify removal from network infrastructure
          cisco.catalystcenter.network_profile_switching_workflow_manager:
            catalystcenter_host: "{{ catalystcenter_host }}"
            catalystcenter_username: "{{ catalystcenter_username }}"
            catalystcenter_password: "{{ catalystcenter_password }}"
            catalystcenter_verify: "{{ catalystcenter_verify }}"
            catalystcenter_port: "{{ catalystcenter_port }}"
            catalystcenter_version: "{{ catalystcenter_version }}"
            catalystcenter_debug: "{{ catalystcenter_debug }}"
            catalystcenter_log: true
            catalystcenter_log_level: DEBUG
            config_verify: true
            catalystcenter_api_task_timeout: 1000
            catalystcenter_task_poll_interval: 1
            state: deleted
            config:
              - profile_name: "Enterprise_Switching_Profile"

        # Selective site unassignment while preserving profile and templates
        - name: Unassign specific sites from switching profile for network reorganization
          cisco.catalystcenter.network_profile_switching_workflow_manager:
            catalystcenter_host: "{{ catalystcenter_host }}"
            catalystcenter_username: "{{ catalystcenter_username }}"
            catalystcenter_password: "{{ catalystcenter_password }}"
            catalystcenter_verify: "{{ catalystcenter_verify }}"
            catalystcenter_port: "{{ catalystcenter_port }}"
            catalystcenter_version: "{{ catalystcenter_version }}"
            catalystcenter_debug: "{{ catalystcenter_debug }}"
            catalystcenter_log: true
            catalystcenter_log_level: DEBUG
            config_verify: true
            catalystcenter_api_task_timeout: 1000
            catalystcenter_task_poll_interval: 1
            state: deleted
            config:
              - profile_name: "Enterprise_Switching_Profile"
                site_names:
                  - "Global/India/Chennai/Main_Office"

        # Selective template unassignment for configuration template management
        - name: Remove specific templates from switching profile for template lifecycle management
          cisco.catalystcenter.network_profile_switching_workflow_manager:
            catalystcenter_host: "{{ catalystcenter_host }}"
            catalystcenter_username: "{{ catalystcenter_username }}"
            catalystcenter_password: "{{ catalystcenter_password }}"
            catalystcenter_verify: "{{ catalystcenter_verify }}"
            catalystcenter_port: "{{ catalystcenter_port }}"
            catalystcenter_version: "{{ catalystcenter_version }}"
            catalystcenter_debug: "{{ catalystcenter_debug }}"
            catalystcenter_log: true
            catalystcenter_log_level: DEBUG
            config_verify: true
            catalystcenter_api_task_timeout: 1000
            catalystcenter_task_poll_interval: 1
            state: deleted
            config:
              - profile_name: "Enterprise_Switching_Profile"
                day_n_templates:
                  - "Outdated_Config_Template"

        # Bulk profile creation for large-scale network deployment
        - name: Create multiple switching profiles for enterprise network standardization
          cisco.catalystcenter.network_profile_switching_workflow_manager:
            catalystcenter_host: "{{ catalystcenter_host }}"
            catalystcenter_username: "{{ catalystcenter_username }}"
            catalystcenter_password: "{{ catalystcenter_password }}"
            catalystcenter_verify: "{{ catalystcenter_verify }}"
            catalystcenter_port: "{{ catalystcenter_port }}"
            catalystcenter_version: "{{ catalystcenter_version }}"
            catalystcenter_debug: "{{ catalystcenter_debug }}"
            catalystcenter_log: true
            catalystcenter_log_level: DEBUG
            config_verify: true
            catalystcenter_api_task_timeout: 1000
            catalystcenter_task_poll_interval: 1
            state: merged
            config:
              - profile_name: "Campus_Core_Switching"
                day_n_templates:
                  - "Core_Switch_Config"
                  - "OSPF_Configuration"
                site_names:
                  - "Global/Headquarters/Core_Network"
              - profile_name: "Branch_Access_Switching"
                day_n_templates:
                  - "Access_Switch_Config"
                  - "VLAN_Configuration"
                site_names:
                  - "Global/Branch_Offices/Remote_Sites"




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-response_create"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__return-response_create:

      .. rst-class:: ansible-option-title

      **response_create**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-response_create" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list containing the response returned by the Cisco Catalyst Center Python SDK when a switch profile is successfully created. The response confirms the successful creation of the profile and provides details about the profile, including its name and status.



      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"msg": "Profile created/updated are verified successfully for '['Enterprise\_Access\_Switch']'.", "response": [{"profile\_name": "Enterprise\_Access\_Switch", "status": "Network Profile [487bf1e8-b014-4cc7-9e33-1ea7c2805b4c] Successfully Created"}], "status": "success"}`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-response_delete_idempotent"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__return-response_delete_idempotent:

      .. rst-class:: ansible-option-title

      **response_delete_idempotent**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-response_delete_idempotent" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list containing the response returned by the Cisco Catalyst Center Python SDK. This response is provided when attempting to delete switching profiles in an idempotent manner. If the profiles are already deleted, the response indicates that no changes were required.



      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"msg": "No changes required, profile(s) are already deleted.", "response": "No changes required, profile(s) are already deleted.", "status": "success"}`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-response_delete_profile"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__return-response_delete_profile:

      .. rst-class:: ansible-option-title

      **response_delete_profile**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-response_delete_profile" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list containing the response returned by the Cisco Catalyst Center Python SDK when a switch profile is successfully deleted or unassigned. The response confirms the deletion/unassignment and provides details of the profile and its associated operations.



      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"msg": "Switch profile(s) deleted/unassigned and verified successfully for '['Enterprise\_Switching\_Profile']'.", "response": [{"profile\_name": "Enterprise\_Switching\_Profile", "site\_unassign\_status": "Site(s) are unassigned successfully.", "status": "Network profile [740ebd91-4f82-42ac-bbca-94393f0cc799] successfully deleted"}], "status": "success"}`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-response_unassign_site"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__return-response_unassign_site:

      .. rst-class:: ansible-option-title

      **response_unassign_site**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-response_unassign_site" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list containing the response returned by the Cisco Catalyst Center Python SDK when a site is successfully unassigned from a switch profile. The response confirms the unassignment and provides details about the profile and site(s) affected.



      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"msg": "Switch profile(s) deleted/unassigned and verified successfully for '['Enterprise\_Switching\_Profile']'.", "response": [{"profile\_name": "Enterprise\_Switching\_Profile", "site\_unassign\_status": "Site(s) '['Global/India/Chennai/Main\_Office']' unassigned successfully."}], "status": "success"}`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-response_unassign_template"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__return-response_unassign_template:

      .. rst-class:: ansible-option-title

      **response_unassign_template**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-response_unassign_template" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list containing the response returned by the Cisco Catalyst Center Python SDK when a template is successfully unassigned from a switch profile. The response confirms the unassignment and provides details about the profile and the template(s) affected.



      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"msg": "Switch profile(s) deleted/unassigned and verified successfully for '['Enterprise\_Switching\_Profile']'.", "response": [{"profile\_name": "Enterprise\_Switching\_Profile", "template\_unassign\_status": "Template(s) '['Periodic\_Config\_Audit']' unassigned successfully."}], "status": "success"}`


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-response_update"></div>

      .. _ansible_collections.cisco.catalystcenter.network_profile_switching_workflow_manager_module__return-response_update:

      .. rst-class:: ansible-option-title

      **response_update**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-response_update" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list containing the response returned by the Cisco Catalyst Center Python SDK when a switch profile is successfully updated. The response confirms the successful update of the profile and provides details about the profile, including its name and status.



      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"msg": "Profile created/updated are verified successfully for '['Campus\_Core\_Switch\_Profile']'.", "response": [{"profile\_name": "Campus\_Core\_Switch\_Profile", "status": "Network profile 'Campus\_Core\_Switch\_Profile' updated successfully"}], "status": "success"}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- A Mohamed Rafeek (@mabdulk2)
- Madhan Sankaranarayanan (@madhansansel)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

